--- a/sprint-1/src/styles/welcome.css
+++ b/sprint-1/src/styles/welcome.css
@@ -12,7 +12,7 @@
     background-position: center center;
 }
 
-button{
+.button{
     /* width: 80px;
     height: 80px; */
     background-color: #f4511e;
@@ -30,7 +30,7 @@ button{
     border-radius: 10px;
 }
 
-button:hover{
+.button:hover{
     opacity: 1;
 }
 
