--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -4,9 +4,11 @@ height: 180px;
 
 }
 .slide{
+    
     margin-top: 5%;
     width: 100%;
     display: flex;
+    justify-content: center;
     gap: 5px;
     
     }
