--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -43,12 +43,12 @@ height: 180px;
 
 
         /* button para mostrar ciudades*/
-        #buttonShow{
-            align-self: center;
-            margin-left: 42%;
-            color:aqua;
-            width :10%;
-           float: inherit;
+
+        .citiesButons{
             
+            justify-content: center;
+            
+           display: flex;
+           gap: 10px;
 
         }
