--- a/sprint-1/src/styles/header.css
+++ b/sprint-1/src/styles/header.css
@@ -1,19 +1,63 @@
 .Header{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 30vh;
-    background-color: orangered;
+    background-color: rgb(255, 88, 42);
 }
 
 .Header-link{ 
-    color: black;
+ 
+    width: 100%;
     padding: 1rem;
+    opacity: 0.8;
+    align-self:baseline;
+    font-size: 20px;
+    font-weight: 300px;
+    color: #f2e5e5;
+    text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #d5972c, 0px 0px 10px #d3a593,
+      0px 0px 20px #d3a593;
 } /* opcion para estilar links? */
-
+.Header-link:hover{
+    opacity: 1;
+}
+.navigator{
+    display: flex;
+    flex-grow: 2;
+}
+.ulNav{
+    display: flex;
+    opacity: 0.8;
+    flex-direction: row;
+    margin-right: 50px;
+    gap: 19px;
+    list-style-type: none;
+}
+.ulNav:hover{
+    opacity: 1;
+}
 
 .logoViaje{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
+    margin-top: 10px;
+}
+.logos{
+    display: flex;
+    flex-grow: 2;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    margin-left: 5%;
+
+}
+.logoh2{
+ 
+
+    font-size: 25px;
+    font-weight: 300px;
+    color: #4b0202;
+    text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #d5972c, 0px 0px 10px #d3a593,
+      0px 0px 20px #d3a593;
 }
