add cards e functionality from input

--- a/sprint-1/src/styles/newcities.css
+++ b/sprint-1/src/styles/newcities.css
@@ -1,14 +1,13 @@
-.newcities{
-    min-height: 50vh;
 
-}
 .inpF{
     display: flex;
-    float:right;
+    align-self: flex-end;
     width: 30%;
+    margin-top: 20px;
 }
 .inputsearch{
     width: 80%;
+    float: right;
     
 }
 .buttonSearch{
