--- a/sprint-1/src/styles/showcities.css
+++ b/sprint-1/src/styles/showcities.css
@@ -1,3 +1,9 @@
 .showcities{
-    min-height: 50vh;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    margin-bottom: 5px;
 }
