--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -10,7 +10,7 @@ height: 180px;
     display: flex;
     justify-content: center;
     gap: 5px;
-    
+    height: 40vh;
     }
     .slide>div>p{
         width: 100%;
@@ -51,4 +51,25 @@ height: 180px;
            display: flex;
            gap: 10px;
 
+        }
+        @media (max-width: 700px){
+            .slide>div>img{
+                width: 100%;
+                height: 130px;
+                
+                }
+        }
+        @media (max-width: 530px){
+            .slide>div>img{
+                width: 100%;
+                height: 90px;
+                
+                }
+        }
+        @media (max-width: 400px){
+            .slide>div>img{
+                width: 100%;
+                height: 70px;
+                
+                }
         }
