--- a/sprint-1/src/styles/footer.css
+++ b/sprint-1/src/styles/footer.css
@@ -4,23 +4,21 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 20vh;
+    height: 30vh;
     background-color: rgba(34, 55, 42, 0.863);
     color: white;
 }
-
+.dated{
+    text-align: center;
+}
 .socialMedia{
     display: flex;
     flex-direction: column;
     font-style: italic;
+    align-items: center;
 }
 
-.socialMedia1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    font-style: italic;
-}
+
 
 a{
     color: white;
@@ -28,6 +26,7 @@ a{
     font-style: italic;
 }
 .top{
+    display: flex;
     align-self: center;
     color:rgb(255, 88, 42); ;
     border-radius:10px;
