--- a/sprint-1/src/styles/showcities.css
+++ b/sprint-1/src/styles/showcities.css
@@ -4,6 +4,28 @@
     gap: 15px;
     flex-wrap: wrap;
     justify-content: space-around;
-
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+.buttonBuy{
+    margin-bottom: 10px;
+    display: flex;
+    align-self: center;
+    background-color: #f4511e;
+    border: none;
+    color: white;
+    padding: 8px 25px;
+    text-align: center;
+    font-size: 16px;
+
+    opacity: 0.7;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 10px;
+    }
+    .buttonBuy:hover{
+        opacity: 1;
+    }
+
