--- a/sprint-1/src/styles/header.css
+++ b/sprint-1/src/styles/header.css
@@ -1,6 +1,6 @@
 .Header{
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
     height: 30vh;
@@ -22,43 +22,9 @@
 }
 
 
-.navigator{
-    display: flex;
-    flex-grow: 2;
-}
-.ulNav{
-    display: flex;
-    opacity: 0.8;
-    flex-direction: row;
-    margin-right: 50px;
-    gap: 19px;
-    list-style-type: none;
-}
-.ulNav:hover{
-    opacity: 1;
-}
-
 .logoViaje{
-    width: 150px;
-    height: 150px;
-}
-.logos{
-    display: flex;
-    flex-grow: 2;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-    margin-left: 5%;
-
-}
-.logoh2{
- 
-
-    font-size: 25px;
-    font-weight: 300px;
-    color: #4b0202;
-    text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #d5972c, 0px 0px 10px #d3a593,
-      0px 0px 20px #d3a593;
+    width: 100px;
+    height: 100px;
 }
 
 .ButtonBurger{
@@ -72,7 +38,6 @@
     opacity: 0.8;
     transition: 0.3s;
     display: inline-block;
-    text-decoration: none;
     cursor: pointer;
     border-radius: 10px;
 }
@@ -82,9 +47,39 @@
 }
 
 .LinkBurger{
+    display: flex;
+    flex-direction: column;
     list-style: none;
 }
 
+.Maping{
+    width: 80%;
+    list-style: none;
+    display: flex;
+    
+}
+
+.LogoContainer{
+    width: 20%;
+}
+
+.ProfileContainer{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.Usuario{
+    width: 30px;
+    height: 30px;
+}
+
+.ProfileLink{
+    margin-left: 0.5rem;
+    text-decoration: underline;
+}
 
 @media (max-width: 425px){
     .Maping{
@@ -98,6 +93,15 @@
     .logoViaje{
         width: 100px;
         height: 100px;
+        margin-left: 0.5rem;
+    }
+    
+    .Burger{
+        width: 30%;
+    }
+
+    .LogoContainer{
+        width: 70%;
     }
 }
 
