--- a/sprint-1/src/styles/sigleCard.css
+++ b/sprint-1/src/styles/sigleCard.css
@@ -25,6 +25,12 @@ border-radius: 10px;
     background-color:rgb(242, 246, 53) ;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.336);
 }
+.imgCard{
+    border-radius: 10px;
+    width: 100%;
+    height: 180px;
+
+}
 .imgCard1{
 border-radius: 10px;
 width: 100%;
