--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -41,6 +41,15 @@ height: 180px;
                 opacity: 1;
             }
 
+.popularCities>h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(141, 142, 82) ;
+    font-style: italic;
+    text-decoration: underline;
+    
+}
 
         /* button para mostrar ciudades*/
 
