--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -9,6 +9,7 @@ height: 180px;
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 5px;
     height: 40vh;
     }
