--- a/sprint-1/src/styles/sigleCard.css
+++ b/sprint-1/src/styles/sigleCard.css
@@ -21,6 +21,7 @@
 display: flex ;
 flex-direction: column;
 width: 200px;
+height: 400px;
 border-radius: 10px;
     background-color:rgb(242, 246, 53) ;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.336);
@@ -38,7 +39,7 @@ height: 180px;
 }
 .bodyCard{
 text-align: center;
-    height: 100%;
+    height: 200px;
 }
 .titleCard{
 
@@ -58,7 +59,7 @@ font-style: italic;
   .card{
     margin-top: 90px;
     width: 100%;
-    height: 40%;
+    height: 400px;
   }  
   
 
