--- a/sprint-1/src/styles/carousel.css
+++ b/sprint-1/src/styles/carousel.css
@@ -1,4 +1,4 @@
-.slide>div>img{
+.slide>div>a>img{
 width: 100%;
 height: 180px;
 
@@ -82,3 +82,6 @@ height: 180px;
                 
                 }
         }
+
+
+  
