--- a/sprint-1/src/styles/header.css
+++ b/sprint-1/src/styles/header.css
@@ -48,7 +48,7 @@
 
 .LinkBurger{
     display: flex;
-    flex-direction: column;
+   /*  flex-direction: column; */
     list-style: none;
 }
 
@@ -97,11 +97,13 @@
     }
     
     .Burger{
-        width: 30%;
+        width: 70%;
+        display: flex;
+        justify-content: end;
     }
 
     .LogoContainer{
-        width: 70%;
+        width: 30%;
     }
 }
 
